<resources>
    <string name="app_name">Cashmoov Subscriber</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="visit_our_site">Visit our site</string>
    <string name="about_cashmoov_app">About Cashmoov App</string>
    <string name="version">Version : 31-03-2023 01:01 PM</string>
    <string name="Calculate">Calculate</string>
    <string name="platform_cash_moov">Platform : CASH MOOV</string>
    <string name="user_id">User ID</string>
    <string name="maximumLimitCount">Global limit count</string>
    <string name="senderName_without_semic"> Sender name </string>
    <string name="pay_month_limit_count">Month limit count :</string>
    <string name="parent_id">Parent transaction id</string>
    <string name="pay_month_limit_amount">Month limit amount :</string>
    <string name="Commisionwallet">Commision wallet</string>
    <string name="maxvaluewallet">Max value</string>
    <string name="minvaluewallet">Min value</string>
    <string name="alertvalue">Alert value</string>
    <string name="exchangeRate"> Exchange rate  </string>
    <string name="sender_wallet_owner_code"> Sender wallet owner code </string>
    <string name="receiver_wallet_owner_code">Receiver wallet owner code </string>
    <string name="acc_created">Account created!</string>
    <string name="acc_created_message">Dear user, your account has been successfully created. Log in to start using the app</string>
    <string name="continu">Continue</string>
    <string name="beneficiary_management">Beneficiary Management</string>
    <string name="add_contact">Add a contact</string>
    <string name="hello">Hello,</string>
    <string name="dashboard">Dashboard</string>
    <string name="pay">Pay</string>
    <string name="paynew">Pay</string>
    <string name="upload_success_toast">upload success</string>
    <string name="Tax"> Tax : 0.00</string>
    <string name="convertionRate_reviewPage"> Conversion Rate :</string>
    <string name="please_wait">Please wait...</string>
    <string name="Taxvat">VAT</string>
    <string name="Taxfinancial">Financial Tax</string>
    <string name="balance">Balance</string>
    <string name="our_operations">Our Operations</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="airtime_purchase">Airtime Purchase</string>
    <string name="payment">Payments</string>
    <string name="paymentnew">Payment</string>
    <string name="merchant_payment">Pay</string>
    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="receive_remittance">Receive Remittance</string>
    <string name="fee">Fee</string>
    <string name="service_point">Service Point</string>
    <string name="complete_profile">Complete the profile</string>
    <string name="complet_70">70% complete</string>
    <string name="out_8_10_complete">8 out of 10 complete</string>
    <string name="recharge_payment">Recharge &amp; Payment</string>
    <string name="next">Next</string>
    <string name="ignore">Ignore</string>
    <string name="to_start">Start</string>
    <string name="to_end">End</string>
    <string name="watch_video">Watch the video</string>
    <string name="video_tutorial_message">If you\'re new and need help, watch this short tutorial to get started.</string>
    <string name="already_acc_login">Already have an account? - Log in</string>
    <string name="register">Register</string>
    <string name="register_message">Please enter your valid phone number. We will send you a 4-digit code to verify the account.</string>
    <string name="enter_location">Enter your location</string>
    <string name="enter_phone_no">Enter your mobile number</string>
    <string name="enter_phone_no_val">Mobile number must be at least 9 digits long</string>
    <string name="enter_phone_zero_val"> Mobile number must not start with 0</string>
    <string name="enter_phone_no_valnew">Mobile number must be at least 7 digits long</string>
    <string name="see_terms_policy">Please see our Terms of Service Policy</string>
    <string name="skip">Skip</string>
    <string name="complete_your_info">Complete your information</string>
    <string name="register_info_message">To complete your registration we need certain information.</string>
    <string name="name">Name</string>
    <string name="fname">First name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="username">
        <font fgcolor="#000000">Samuel</font><font fgcolor="#4f62c0"> </font><font fgcolor="#4f62c0">Flatcher</font>
    </string>
    <string name="occupation">Occupation</string>
    <string name="dob">Date of Birth</string>
    <string name="choose_pin">Choose PIN Ex: 1234</string>
    <string name="repeat_pin">Repeat PIN Ex: 1234</string>
    <string name="attach_your_id">Attach your ID</string>
    <string name="attach_id_message">Take a photo of your ID with your camera.</string>
    <string name="front">Ex: Front*</string>
    <string name="ex_verso">Ex: Back*</string>
    <string name="id_proof_no">Id Proof Number</string>
    <string name="verification">Verification OTP</string>
    <string name="verification_message">Enter the 4-digit OTP code we sent to +224 621 123 123.</string>
    <string name="verification_register_otp_ip">Kindly contact your customer care for generate OTP or please enter the OTP to verify your account.</string>
    <string name="verification_register_otp">Please enter the OTP (one time password) to verify your account. Code has been sent to registered email id &amp; mobile number</string>
    <string name="session_expired_send_back">The session expires in 60 seconds. Haven\'t received a code? Send it back</string>
    <string name="verification_reset_pin_message">Kindly contact your customer care for Reset Pin OTP and please enter the OTP to verify your account.</string>
    <string name="my_account">My Account</string>
    <string name="your_currency">Your Currency</string>
    <string name="acc_statement">Account Statements</string>
    <string name="last_transactions">Your Last Transactions</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="recharge">Recharge</string>
    <string name="your_beneficiaries">Beneficiaries</string>
    <string name="language">Language</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="share_app">Share App</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="about">About</string>
    <string name="change_pin">Change Pin</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset">Reset</string>
    <string name="hello_this_is_your">Hello this is your</string>
    <string name="cash">Cash</string>
    <string name="moov_qr">Moov QR</string>
    <string name="scan_me">Scan Me</string>
    <string name="change_language">Change Language</string>
    <string name="choose_language">Please choose the language :</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="action_requires_biometric_auth">This action requires biometric authentication</string>
    <string name="protection_of_sensitive">The protection of sensitive data is not active.</string>
    <string name="activate_ptotection">Activate Protection</string>
    <string name="press_cancel_return_to_dashboard">Press the cancel button to return to the dashboard</string>
    <string name="cancel">Cancel</string>
    <string name="delete_configuration">Are you sure you want to delete the configuration?</string>
    <string name="this_action_reset_all_settings">This action will reset all of the application\'s settings.</string>
    <string name="need_to_link_account">You will need to link this app to your account again</string>
    <string name="confirm">Confirm</string>
    <string name="current_profile_photo">Your current profile photo</string>
    <string name="select_new_profile_photo">Select your new profile photo</string>
    <string name="you_are_reloading">You make a recharge</string>
    <string name="my_number">My Number</string>
    <string name="another_number">Another Number</string>
    <string name="bank_transfer_to_wallet">Bank transfer to your wallet</string>
    <string name="transaction_details">Transaction details</string>
    <string name="select_bank">Select Bank*</string>
    <string name="acc_number">Account number:</string>
    <string name="montant_a_envoyer">Amount to send</string>
    <string name="fees">Fee :</string>
    <string name="amount_to_paid">Amount paid</string>
    <string name="amount_to_be_paid">Amount  paid</string>
    <string name="amount_to_paid_international">Amount to be Paid</string>
    <string name="amount_to_paid_intec">Amount to be Paid :</string>
    <string name="amount_to_paid_colon">Amount paid:</string>
    <string name="send">Send</string>
    <string name="please_enter_signature">Please enter signature</string>
    <string name="choose_operation">Choose the operation</string>
    <string name="subscriber">Subscriber</string>
    <string name="non_subscriber">Non Subscriber</string>
    <string name="international">International</string>
    <string name="sendinternational"> Send International</string>
    <string name="receiveinternational">Receive International</string>
    <string name="Cashmoov">Cashmoov</string>
    <string name="Parteners">Partners</string>
    <string name="bank_to_wallet">Bank to wallet</string>
    <string name="wallet_to_bank">wallet to Bank</string>
    <string name="money_transfer_to_subscriber">Money transfer to subscriber</string>
    <string name="subscriber_details">Subscriber details</string>
    <string name="scanner">Scanner</string>
    <string name="details_du_receveur">Receiver details</string>
    <string name="valid_recipient_number">Recipient number*</string>
    <string name="amount">Amount*</string>
    <string name="non_subscribed_money_transfer">Non-subscribed money transfer</string>
    <string name="recipient_details">Recipient details</string>
    <string name="valid_fname">First name*</string>
    <string name="valid_lname">Last Name*</string>
    <string name="valid_phone_number">Phone number*</string>
    <string name="valid_email">Email*</string>
    <string name="valid_city">City*</string>
    <string name="valid_address">Address*</string>
    <string name="valid_select_gender">Select Gender*</string>
    <string name="valid_select_occupation">Select Occupation*</string>
    <string name="valid_dob">Date of Birth*</string>
    <string name="valid_select_id_proof">Select Id Proof*</string>
    <string name="vaild_id_proof_no">Id Proof Number*</string>
    <string name="valid_amount_send">Amount to send*</string>
    <string name="gender">Gender</string>
    <string name="reason_for_sending">Reason for sending</string>
    <string name="international_money_transfer">International money transfer</string>
    <string name="Rate">Rate:</string>
    <string name="transfer_to_your_bank">Transfer to your Bank</string>
    <string name="valid_select_provider">Select provider*</string>
    <string name="amount_to_send">Amount to send</string>
    <string name="valid_amount">Amount*</string>
    <string name="beneficiary_details">Beneficiary details</string>
    <string name="valid_beneficiairy_name">Beneficiary name*</string>
    <string name="valid_confirmation_code">Confirmation code*</string>
    <string name="valid_beneficiary_currency">Beneficiary currency*</string>
    <string name="fee_consulting_service">Cash Moov Fee Consulting Service</string>
    <string name="service_chosen_colon">Service chosen:</string>
    <string name="close">Close</string>
</resources>