<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.receiveremittance.ReceiveRemittance">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_active" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aileron_semibold"
                android:lineSpacingExtra="3sp"
                android:text="@string/receive_remittance"
                android:textColor="#29304d"
                android:textSize="@dimen/_15sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"

            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#29304d"
                android:fontFamily="@font/aileron_semibold"
                android:lineSpacingExtra="3sp"
                android:text="@string/beneficiary_details"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="#999999"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="37.5dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:hint="@string/valid_beneficiairy_name"
                android:textColor="#323232"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="#999999"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="37.5dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:hint="@string/valid_confirmation_code"
                android:textColor="#323232"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="#999999"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="37.5dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:hint="@string/valid_beneficiary_currency"
                android:textColor="#323232"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="#999999"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="37.5dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:hint="@string/valid_amount"
                android:textColor="#323232"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="#999999"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="37.5dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:hint="@string/valid_phone_number"
                android:textColor="#323232"
                android:textSize="15sp" />



            <TextView
                android:id="@+id/tvSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:textColor="#ffffff"
                android:lineSpacingExtra="3sp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/btn_blue"
                android:layout_gravity="center"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:fontFamily="@font/aileron_bold"
                android:gravity="center"
                android:text="@string/send"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:weightSum="3"
                android:orientation="horizontal"/>


        </LinearLayout>



    </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>