<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.moneytransfer.ToNonSubscriber">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_active" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aileron_semibold"
                android:lineSpacingExtra="3sp"
                android:text="@string/non_subscribed_money_transfer"
                android:textColor="#29304d"
                android:textSize="17sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#29304d"
                android:fontFamily="@font/aileron_semibold"
                android:lineSpacingExtra="3sp"
                android:text="@string/transaction_details"
                />

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="@color/bgColorHint"
                android:inputType="numberDecimal"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:hint="@string/amount"
                android:textColor="@color/textColorLBlack"
                android:textSize="@dimen/_13sdp" />

            <EditText
                android:visibility="gone"
                android:id="@+id/etAmountNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="@color/bgColorHint"
                android:inputType="numberDecimal"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:hint="@string/amount_to_paid"
                android:textColor="@color/textColorLBlack"
                android:textSize="@dimen/_13sdp"/>

            <LinearLayout
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/ic_baseline_info_24"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fees"
                    android:layout_gravity="clip_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="#000"
                    />

                <TextView
                    android:id="@+id/tvFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_horizontal"
                    android:paddingTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#000"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_to_paid_colon"
                    android:layout_gravity="clip_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="#000"
                    />

                <TextView
                    android:id="@+id/tvAmtPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_gravity="clip_horizontal"
                    android:paddingTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="#000"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:textColor="#29304d"
                android:fontFamily="@font/aileron_semibold"
                android:lineSpacingExtra="3sp"
                android:text="@string/recipient_details"
                />
            <AutoCompleteTextView
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="@color/bgColorHint"
                android:inputType="phone"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:hint="@string/valid_phone_number"
                android:textColor="@color/textColorLBlack"
                android:textSize="@dimen/_13sdp" />

            <EditText
                android:id="@+id/etFname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="@color/bgColorHint"
                android:inputType="text"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:hint="@string/valid_fname"
                android:textColor="@color/textColorLBlack"
                android:textSize="@dimen/_13sdp"/>
            <EditText
                android:id="@+id/etLname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="@color/bgColorHint"
                android:inputType="text"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:hint="@string/valid_lname"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/_13sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="@color/bgColorHint"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/textColorLBlack">
                <TextView
                    android:id="@+id/spGender"
                    android:padding="@dimen/_5sdp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableRight="@drawable/ic_arrow_down"
                    android:text="@string/valid_select_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorLBlack"
                    android:textSize="15sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_edittextname"
                android:backgroundTint="@color/bgColorHint"
                android:inputType="text"
                android:lineSpacingExtra="10sp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:hint="@string/reason_for_sending"
                android:textColor="@color/textColorLBlack"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tvSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:textColor="#ffffff"
                android:lineSpacingExtra="3sp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/btn_blue"
                android:layout_gravity="center"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:fontFamily="@font/aileron_bold"
                android:gravity="center"
                android:text="@string/send"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:weightSum="3"
                android:orientation="horizontal"/>


        </LinearLayout>



    </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>