<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/check"
            android:backgroundTint="@color/colorPrimaryDark" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/fee_consulting_service"
            android:textAlignment="center"
            android:fontFamily="@font/aileron_semibold"
            android:textColor="@color/textColorDBlack"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_chosen_colon"
            android:textSize="@dimen/_14sdp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/aileron_semibold"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvServiceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/money_transfer"
            android:textColor="@color/green_700"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/aileron_bold"
            android:gravity="center_horizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"/>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/btn_blue"
                android:text="@string/close"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>